--- a/login.html
+++ b/login.html
@@ -35,24 +35,27 @@
 </nav>
 
 
-<form class="formCss">
+<form class="formCss" action="index.html" onsubmit="return validateEmail()">
     <h2>User Login</h2>
     <br>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" onchange="validateEmail()">
+        <label for="errorEmail" id="errorEmail"></label>
     </div>
     <br>
     <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <label for="errorPassword" id="errorPassword"></label>
     </div>
     <br>
     <!--    <div class="form-group form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
         </div>-->
+    <label for="error" id="error"></label>
+    <br>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
@@ -143,6 +146,6 @@
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
-
+<script src="script.js"></script>
 </body>
 </html>
