--- a/signup.html
+++ b/signup.html
@@ -75,30 +75,41 @@
 
 </form>-->
 
-<form class="formCss">
+<form class="formCss" action="login.html" onsubmit="return validateAll()">
     <h2>Signup</h2>
     <br>
     <div class="form-group">
         <label for="Name">Name</label>
-        <input type="email" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter your name">
     </div>
     <br>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" onchange="validateEmail()">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label for="errorEmail" id="errorEmail"></label>
+    </div>
+    <br>
+    <div class="form-group">
+        <label for="phoneNumber">Phone number</label>
+        <input type="text" class="form-control" id="phoneNumber" aria-describedby="emailHelp" placeholder="Enter Phone Number" onchange="validatePhoneNumber()">
+        <label for="errorPhoneNumber" id="errorPhoneNumber"></label>
     </div>
     <br>
     <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" onchange="validatePassword()">
+        <label for="errorPassword" id="errorPassword"></label>
     </div>
     <br>
     <div class="form-group">
         <label for="exampleInputConfirmPassword1">Confirm Password</label>
-        <input type="password" class="form-control" id="exampleInputConfirmPassword1" placeholder="Password">
+        <input type="password" class="form-control" id="exampleInputConfirmPassword1" placeholder="Password" onchange="validateConfirmPassword()">
+        <label for="errorConfirmPassword" id="errorConfirmPassword"></label>
     </div>
 
+    <br>
+    <label for="error" id="error"></label>
     <br>
 
     <button type="submit" class="btn btn-primary">Submit</button>
@@ -111,6 +122,8 @@
 
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+
+<script src="script.js"></script>
 
 
 </body>
