Reduced spaces between fields in signup

--- a/signup.html
+++ b/signup.html
@@ -77,38 +77,33 @@
 
 <form class="formCss" action="login.html" onsubmit="return validateAll()">
     <h2>Signup</h2>
-    <br>
     <div class="form-group">
         <label for="Name">Name</label>
-        <input type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter your name">
+        <input required type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter your name">
+        <label></label>
     </div>
-    <br>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" onchange="validateEmail()">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <small id="emailHelp" class="form-text text-muted"></small>
         <label for="errorEmail" id="errorEmail"></label>
     </div>
-    <br>
     <div class="form-group">
         <label for="phoneNumber">Phone number</label>
         <input type="text" class="form-control" id="phoneNumber" aria-describedby="emailHelp" placeholder="Enter Phone Number" onchange="validatePhoneNumber()">
         <label for="errorPhoneNumber" id="errorPhoneNumber"></label>
     </div>
-    <br>
     <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" onchange="validatePassword()">
         <label for="errorPassword" id="errorPassword"></label>
     </div>
-    <br>
     <div class="form-group">
         <label for="exampleInputConfirmPassword1">Confirm Password</label>
         <input type="password" class="form-control" id="exampleInputConfirmPassword1" placeholder="Password" onchange="validateConfirmPassword()">
         <label for="errorConfirmPassword" id="errorConfirmPassword"></label>
     </div>
 
-    <br>
     <label for="error" id="error"></label>
     <br>
 
