--- a/signup.html
+++ b/signup.html
@@ -79,7 +79,7 @@
     <h2>Signup</h2>
     <div class="form-group">
         <label for="Name">Name</label>
-        <input required type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter your name">
+        <input required type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter name">
         <label></label>
     </div>
     <div class="form-group">
