--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
     <br>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" onchange="validateEmail()">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" onchange="validateEmail()">
         <label for="errorEmail" id="errorEmail"></label>
     </div>
     <br>
