--- a/signup.html
+++ b/signup.html
@@ -79,18 +79,18 @@
     <h2>Signup</h2>
     <div class="form-group">
         <label for="Name">Name</label>
-        <input required type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Enter name">
+        <input required type="text" class="form-control" id="Name" aria-describedby="emailHelp" placeholder="Name">
         <label></label>
     </div>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" onchange="validateEmail()">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" onchange="validateEmail()">
         <small id="emailHelp" class="form-text text-muted"></small>
         <label for="errorEmail" id="errorEmail"></label>
     </div>
     <div class="form-group">
         <label for="phoneNumber">Phone number</label>
-        <input type="text" class="form-control" id="phoneNumber" aria-describedby="emailHelp" placeholder="Enter Phone Number" onchange="validatePhoneNumber()">
+        <input type="text" class="form-control" id="phoneNumber" aria-describedby="emailHelp" placeholder="Phone Number" onchange="validatePhoneNumber()">
         <label for="errorPhoneNumber" id="errorPhoneNumber"></label>
     </div>
     <div class="form-group">
